syntax = "proto3";
option csharp_namespace = "Sherlock.Engine.Messages";

import "Sherlock.proto";

message Inspect
{
}

message QueryReports {}

message QueryLogsAndMessages{
	string actorId = 1;
}

message LogsAndMessagesData{
	string actorId = 1;
	repeated Sherlock.TrackedMessage Messages = 2;
	repeated Sherlock.LogMessage Logs = 3;
}